Upload bundle dumps to S3 and handle null references