@@ -1,7 +1,12 @@
 package ca.uhn.fhir.jpa.starter.service;
 
+import java.io.BufferedReader;
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.security.MessageDigest;
@@ -11,10 +16,19 @@ import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
+
+import javax.servlet.ReadListener;
+import javax.servlet.ServletInputStream;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletRequestWrapper;
+import javax.servlet.http.HttpServletResponse;
 
 import android.util.Base64;
 import autovalue.shaded.kotlin.Triple;
 import ca.uhn.fhir.jpa.starter.model.*;
+import ca.uhn.fhir.rest.client.api.IHttpClient;
+import ca.uhn.fhir.rest.client.api.IHttpRequest;
 
 import com.iprd.fhir.utils.FhirUtils;
 import com.iprd.fhir.utils.PatientIdentifierStatus;
@@ -29,6 +43,8 @@ import org.springframework.context.annotation.Import;
 
 import com.iprd.fhir.utils.DateUtilityHelper;
 
+import ca.uhn.fhir.context.FhirContext;
+import ca.uhn.fhir.context.FhirVersionEnum;
 import ca.uhn.fhir.interceptor.api.Hook;
 import ca.uhn.fhir.interceptor.api.Interceptor;
 import ca.uhn.fhir.interceptor.api.Pointcut;
@@ -37,28 +53,26 @@ import ca.uhn.fhir.jpa.starter.AppProperties;
 @Import(AppProperties.class)
 @Interceptor
 public class ServerInterceptor {
-		
+
 	String imagePath;
-	
+
 	NotificationDataSource notificationDataSource;
-	
-	
+
 	private static final Logger logger = LoggerFactory.getLogger(ServerInterceptor.class);
 
 	private static final String ENCOUNTER_MIGRATED_SYSTEM = "https://iprdgroup.com/identifier";
 	private static final String ENCOUNTER_MIGRATED_VALUE = "argusoft-migrated";
-	
+
 	public ServerInterceptor(String path) {
 		imagePath = path;
 	}
-	
+
 	@Hook(Pointcut.STORAGE_PRESTORAGE_RESOURCE_CREATED)
 	public void insert(IBaseResource theResource) throws IOException {
 		notificationDataSource = NotificationDataSource.getInstance();
-		if(theResource.fhirType().equals("Media")) {
+		if (theResource.fhirType().equals("Media")) {
 			processMedia((Media) theResource);
-		}
-		else if (theResource.fhirType().equals("Encounter")) {
+		} else if (theResource.fhirType().equals("Encounter")) {
 			Encounter encounter = (Encounter) theResource;
 			String encounterId = encounter.getIdElement().getIdPart();
 			String patientId = encounter.getSubject().getReferenceElement().getIdPart();
@@ -67,25 +81,18 @@ public class ServerInterceptor {
 
 			if (!isEncounterMigrated(encounter)) {
 				try {
-					EncounterIdEntity encounterIdEntity = new EncounterIdEntity(encounterId);	
+					EncounterIdEntity encounterIdEntity = new EncounterIdEntity(encounterId);
 					notificationDataSource.persist(encounterIdEntity);
-					ComGenerator comGen = new ComGenerator(
-						"Encounter",
-						encounterId,
-						currentDate,
-						messageStatus,
-						patientId,
-						null
-					);
+					ComGenerator comGen = new ComGenerator("Encounter", encounterId, currentDate, messageStatus,
+							patientId, null);
 
 					notificationDataSource.persist(comGen);
-	
-				}catch(Exception e) {
+
+				} catch (Exception e) {
 					logger.warn(ExceptionUtils.getStackTrace(e));
 				}
 			}
-		}
-		else if(theResource.fhirType().equals("Appointment")) {
+		} else if (theResource.fhirType().equals("Appointment")) {
 			Appointment appointment = (Appointment) theResource;
 			String appointmentId = appointment.getIdElement().getIdPart();
 			String patientId = appointment.getParticipant().get(0).getActor().getReferenceElement().getIdPart();
@@ -94,45 +101,26 @@ public class ServerInterceptor {
 			Date currentDate = DateUtilityHelper.getCurrentSqlDate();
 			Date previousDate = DateUtilityHelper.getPreviousDay(appointmentScheduledDateTime);
 			Date appointmentDate = DateUtilityHelper.timeStampToDate(appointmentScheduledDateTime);
-			
+
 			String messageStatus = ComGenerator.MessageStatus.PENDING.name();
 
-			ComGenerator comGen = new ComGenerator(
-					"Appointment",
-					appointmentId,
-					currentDate,
-					messageStatus,
-					patientId,
-					appointmentScheduledDateTime
-				);
+			ComGenerator comGen = new ComGenerator("Appointment", appointmentId, currentDate, messageStatus, patientId,
+					appointmentScheduledDateTime);
 
-			ComGenerator firstReminder = new ComGenerator(
-					"Appointment",
-					appointmentId,
-					previousDate,
-					messageStatus,
-					patientId,
-					appointmentScheduledDateTime
-				);
+			ComGenerator firstReminder = new ComGenerator("Appointment", appointmentId, previousDate, messageStatus,
+					patientId, appointmentScheduledDateTime);
 
-			ComGenerator secondReminder = new ComGenerator(
-					"Appointment",
-					appointmentId,
-					appointmentDate,
-					messageStatus,
-					patientId,
-					appointmentScheduledDateTime
-				);
+			ComGenerator secondReminder = new ComGenerator("Appointment", appointmentId, appointmentDate, messageStatus,
+					patientId, appointmentScheduledDateTime);
 
 			notificationDataSource.insert(comGen);
-			if(currentDate!=previousDate) {
-				notificationDataSource.insert(firstReminder);	
+			if (currentDate != previousDate) {
+				notificationDataSource.insert(firstReminder);
 			}
-			if(currentDate!=appointmentDate) {
-				notificationDataSource.insert(secondReminder);	
+			if (currentDate != appointmentDate) {
+				notificationDataSource.insert(secondReminder);
 			}
-		}
-		else if (theResource.fhirType().equals("QuestionnaireResponse")) {
+		} else if (theResource.fhirType().equals("QuestionnaireResponse")) {
 			processQuestionnaireResponse((QuestionnaireResponse) theResource);
 		} else if (theResource.fhirType().equals("Patient")) {
 			processPatientInsert(theResource);
@@ -142,7 +130,7 @@ public class ServerInterceptor {
 	@Hook(Pointcut.STORAGE_PRESTORAGE_RESOURCE_UPDATED)
 	public void update(IBaseResource theOldResource, IBaseResource theResource) throws IOException {
 		notificationDataSource = NotificationDataSource.getInstance();
-		if(theResource.fhirType().equals("Media")) {
+		if (theResource.fhirType().equals("Media")) {
 			processMedia((Media) theResource);
 		} else if (theResource.fhirType().equals("Encounter")) {
 			Encounter encounter = (Encounter) theResource;
@@ -153,11 +141,9 @@ public class ServerInterceptor {
 				// Using persist to add entry only if it is not exists
 				notificationDataSource.persist(encounterIdEntity);
 			}
-		}
-		else if (theResource.fhirType().equals("QuestionnaireResponse")) {
+		} else if (theResource.fhirType().equals("QuestionnaireResponse")) {
 			processQuestionnaireResponse((QuestionnaireResponse) theResource);
-		}
-		else if(theResource.fhirType().equals("Patient")){
+		} else if (theResource.fhirType().equals("Patient")) {
 			processPatientUpdate(theOldResource, theResource);
 		}
 	}
@@ -173,11 +159,9 @@ public class ServerInterceptor {
 	}
 
 	private boolean isEncounterMigrated(Encounter encounter) {
-		for (Identifier identifier: encounter.getIdentifier()) {
-			if (
-				identifier.hasSystem() && identifier.getSystem().equals(ENCOUNTER_MIGRATED_SYSTEM) &&
-					identifier.hasValue() && identifier.getValue().equals(ENCOUNTER_MIGRATED_VALUE)
-			) {
+		for (Identifier identifier : encounter.getIdentifier()) {
+			if (identifier.hasSystem() && identifier.getSystem().equals(ENCOUNTER_MIGRATED_SYSTEM)
+					&& identifier.hasValue() && identifier.getValue().equals(ENCOUNTER_MIGRATED_VALUE)) {
 				return true;
 			}
 		}
@@ -185,23 +169,22 @@ public class ServerInterceptor {
 	}
 
 	private void processMedia(Media media) throws IOException {
-		if(media.getContent().hasData()) {
+		if (media.getContent().hasData()) {
 			byte[] bitmapdata = media.getContent().getDataElement().getValue();
 			byte[] base64 = Base64.decode(bitmapdata, Base64.DEFAULT);
 			String md5Hash = md5Bytes(base64);
 			if (md5Hash == null) {
 				return;
 			}
-			File image = new File(imagePath,md5Hash+".jpeg");
+			File image = new File(imagePath, md5Hash + ".jpeg");
 			FileUtils.writeByteArrayToFile(image, base64);
 			String imagePath = image.getAbsolutePath();
 			long imageSize = Files.size(Paths.get(imagePath));
 			long byteSize = base64.length;
-			if(imageSize == byteSize) {
+			if (imageSize == byteSize) {
 				media.getContent().setDataElement(null);
 				media.getContent().setUrl(imagePath);
-			}
-			else {
+			} else {
 				logger.warn("Image Not Proper");
 			}
 		}
@@ -220,44 +203,34 @@ public class ServerInterceptor {
 		}
 
 		if (patientOclId != null && patientOclId.getFirst() != null) {
-			PatientIdentifierEntity patientIdentifierEntityOcl = new PatientIdentifierEntity(
-				patientId,
-				patientOclId.getFirst(),
-				PatientIdentifierEntity.PatientIdentifierType.OCL_ID.name(),
-				patientOclId.getSecond(),
-				patientOclId.getThird(),
-				(notificationDataSource.getPatientIdWithIdentifier(patientId, patientOclId.getFirst()).size() >= 1) ? PatientIdentifierStatus.DUPLICATE.name() : PatientIdentifierStatus.OK.name(),
-				currentEpochTime,
-				currentEpochTime
-			);
+			PatientIdentifierEntity patientIdentifierEntityOcl = new PatientIdentifierEntity(patientId,
+					patientOclId.getFirst(), PatientIdentifierEntity.PatientIdentifierType.OCL_ID.name(),
+					patientOclId.getSecond(), patientOclId.getThird(),
+					(notificationDataSource.getPatientIdWithIdentifier(patientId, patientOclId.getFirst()).size() >= 1)
+							? PatientIdentifierStatus.DUPLICATE.name()
+							: PatientIdentifierStatus.OK.name(),
+					currentEpochTime, currentEpochTime);
 			notificationDataSource.persist(patientIdentifierEntityOcl);
 		}
 
 		if (patientCardNumber != null) {
-			PatientIdentifierEntity patientIdentifierEntityCardNumber = new PatientIdentifierEntity(
-				patientId,
-				patientCardNumber,
-				PatientIdentifierEntity.PatientIdentifierType.PATIENT_CARD_NUM.name(),
-				null,
-				null,
-				(notificationDataSource.getPatientIdWithIdentifier(patientId, patientCardNumber).size() >= 1) ? PatientIdentifierStatus.DUPLICATE.name() : PatientIdentifierStatus.OK.name(),
-				currentEpochTime,
-				currentEpochTime
-			);
+			PatientIdentifierEntity patientIdentifierEntityCardNumber = new PatientIdentifierEntity(patientId,
+					patientCardNumber, PatientIdentifierEntity.PatientIdentifierType.PATIENT_CARD_NUM.name(), null,
+					null,
+					(notificationDataSource.getPatientIdWithIdentifier(patientId, patientCardNumber).size() >= 1)
+							? PatientIdentifierStatus.DUPLICATE.name()
+							: PatientIdentifierStatus.OK.name(),
+					currentEpochTime, currentEpochTime);
 			notificationDataSource.persist(patientIdentifierEntityCardNumber);
 		}
 
 		if (patientTelecom != null) {
-			PatientIdentifierEntity patientIdentifierEntityPhoneNumber = new PatientIdentifierEntity(
-				patientId,
-				patientTelecom,
-				PatientIdentifierEntity.PatientIdentifierType.PHONE_NUM.name(),
-				null,
-				null,
-				(notificationDataSource.getPatientIdWithIdentifier(patientId, patientTelecom).size() >= 1) ? PatientIdentifierStatus.DUPLICATE.name() : PatientIdentifierStatus.OK.name(),
-				currentEpochTime,
-				currentEpochTime
-			);
+			PatientIdentifierEntity patientIdentifierEntityPhoneNumber = new PatientIdentifierEntity(patientId,
+					patientTelecom, PatientIdentifierEntity.PatientIdentifierType.PHONE_NUM.name(), null, null,
+					(notificationDataSource.getPatientIdWithIdentifier(patientId, patientTelecom).size() >= 1)
+							? PatientIdentifierStatus.DUPLICATE.name()
+							: PatientIdentifierStatus.OK.name(),
+					currentEpochTime, currentEpochTime);
 			notificationDataSource.persist(patientIdentifierEntityPhoneNumber);
 		}
 
@@ -267,18 +240,23 @@ public class ServerInterceptor {
 		Patient oldPatient = (Patient) theOldResource;
 		Patient updatedPatient = (Patient) theResource;
 
-		if (FhirUtils.isOclPatient(oldPatient.getIdentifier()) && !FhirUtils.isOclPatient(updatedPatient.getIdentifier())) {
-			// If the use updates the temporary patient from the mobile, the identifier will be removed. So adding it back
-			Identifier oclPatientIdentifier = new Identifier().setSystem("http://iprdgroup.com/identifiers/patientWithOcl").setValue("patient_with_ocl");
+		if (FhirUtils.isOclPatient(oldPatient.getIdentifier())
+				&& !FhirUtils.isOclPatient(updatedPatient.getIdentifier())) {
+			// If the use updates the temporary patient from the mobile, the identifier will
+			// be removed. So adding it back
+			Identifier oclPatientIdentifier = new Identifier()
+					.setSystem("http://iprdgroup.com/identifiers/patientWithOcl").setValue("patient_with_ocl");
 			updatedPatient.addIdentifier(oclPatientIdentifier);
-			// Returning form this block because for temporary patient no need to keep track of duplicate identifier.
+			// Returning form this block because for temporary patient no need to keep track
+			// of duplicate identifier.
 			return;
 		}
 
 		String patientId = updatedPatient.getIdElement().getIdPart();
 
 		Triple<String, String, String> oldPatientOclId = FhirUtils.getOclIdFromIdentifier(oldPatient.getIdentifier());
-		Triple<String, String, String> updatedPatientOclId = FhirUtils.getOclIdFromIdentifier(updatedPatient.getIdentifier());
+		Triple<String, String, String> updatedPatientOclId = FhirUtils
+				.getOclIdFromIdentifier(updatedPatient.getIdentifier());
 
 		String oldPatientCardNumber = FhirUtils.getPatientCardNumber(oldPatient.getIdentifier());
 		String updatedPatientCardNumber = FhirUtils.getPatientCardNumber(updatedPatient.getIdentifier());
@@ -287,8 +265,12 @@ public class ServerInterceptor {
 		String updatedTelecom = updatedPatient.getTelecomFirstRep().getValue();
 
 		if (!Objects.equals(oldPatientOclId, updatedPatientOclId)) {
-			List<PatientIdentifierEntity> patientIdentifierEntityList = (oldPatientOclId == null) ? new ArrayList() : notificationDataSource.getPatientIdentifierEntityByPatientIdAndIdentifier(patientId, oldPatientOclId.getFirst());
-			PatientIdentifierEntity patientIdentifierEntity = (!patientIdentifierEntityList.isEmpty()) ? patientIdentifierEntityList.get(0) : null;
+			List<PatientIdentifierEntity> patientIdentifierEntityList = (oldPatientOclId == null) ? new ArrayList()
+					: notificationDataSource.getPatientIdentifierEntityByPatientIdAndIdentifier(patientId,
+							oldPatientOclId.getFirst());
+			PatientIdentifierEntity patientIdentifierEntity = (!patientIdentifierEntityList.isEmpty())
+					? patientIdentifierEntityList.get(0)
+					: null;
 
 			if (patientIdentifierEntity != null) {
 				patientIdentifierEntity.setStatus(PatientIdentifierStatus.DELETE.name());
@@ -296,7 +278,8 @@ public class ServerInterceptor {
 				notificationDataSource.update(patientIdentifierEntity);
 
 				if (PatientIdentifierStatus.OK.name().equals(patientIdentifierEntity.getStatus())) {
-					PatientIdentifierEntity entryWithDuplicateStatus = notificationDataSource.getPatientIdentifierEntityWithDuplicateStatus(patientId, oldPatientOclId.getFirst());
+					PatientIdentifierEntity entryWithDuplicateStatus = notificationDataSource
+							.getPatientIdentifierEntityWithDuplicateStatus(patientId, oldPatientOclId.getFirst());
 
 					if (entryWithDuplicateStatus != null) {
 						entryWithDuplicateStatus.setStatus(PatientIdentifierStatus.OK.name());
@@ -309,23 +292,20 @@ public class ServerInterceptor {
 			if (updatedPatientOclId != null) {
 				long currentTime = System.currentTimeMillis();
 
-				PatientIdentifierEntity newPatientIdentifierEntity = new PatientIdentifierEntity(
-					patientId,
-					updatedPatientOclId.getFirst(),
-					PatientIdentifierEntity.PatientIdentifierType.OCL_ID.name(),
-					updatedPatientOclId.getSecond(),
-					updatedPatientOclId.getThird(),
-					PatientIdentifierStatus.OK.name(),
-					currentTime,
-					currentTime
-				);
+				PatientIdentifierEntity newPatientIdentifierEntity = new PatientIdentifierEntity(patientId,
+						updatedPatientOclId.getFirst(), PatientIdentifierEntity.PatientIdentifierType.OCL_ID.name(),
+						updatedPatientOclId.getSecond(), updatedPatientOclId.getThird(),
+						PatientIdentifierStatus.OK.name(), currentTime, currentTime);
 				notificationDataSource.persist(newPatientIdentifierEntity);
 			}
 		}
 
 		if (!Objects.equals(oldPatientCardNumber, updatedPatientCardNumber)) {
-			List<PatientIdentifierEntity> patientIdentifierEntityList = notificationDataSource.getPatientIdentifierEntityByPatientIdAndIdentifier(patientId, oldPatientCardNumber);
-			PatientIdentifierEntity patientIdentifierEntity = (!patientIdentifierEntityList.isEmpty()) ? patientIdentifierEntityList.get(0) : null;
+			List<PatientIdentifierEntity> patientIdentifierEntityList = notificationDataSource
+					.getPatientIdentifierEntityByPatientIdAndIdentifier(patientId, oldPatientCardNumber);
+			PatientIdentifierEntity patientIdentifierEntity = (!patientIdentifierEntityList.isEmpty())
+					? patientIdentifierEntityList.get(0)
+					: null;
 
 			if (patientIdentifierEntity != null) {
 				patientIdentifierEntity.setStatus(PatientIdentifierStatus.DELETE.name());
@@ -333,7 +313,8 @@ public class ServerInterceptor {
 				notificationDataSource.update(patientIdentifierEntity);
 
 				if (PatientIdentifierStatus.OK.name().equals(patientIdentifierEntity.getStatus())) {
-					PatientIdentifierEntity entryWithDuplicateStatus = notificationDataSource.getPatientIdentifierEntityWithDuplicateStatus(patientId, oldPatientCardNumber);
+					PatientIdentifierEntity entryWithDuplicateStatus = notificationDataSource
+							.getPatientIdentifierEntityWithDuplicateStatus(patientId, oldPatientCardNumber);
 					if (entryWithDuplicateStatus != null) {
 						entryWithDuplicateStatus.setStatus(PatientIdentifierStatus.OK.name());
 						entryWithDuplicateStatus.setUpdatedTime(System.currentTimeMillis());
@@ -344,23 +325,19 @@ public class ServerInterceptor {
 			if (updatedPatientCardNumber != null) {
 				long currentTime = System.currentTimeMillis();
 
-				PatientIdentifierEntity newPatientIdentifierEntity = new PatientIdentifierEntity(
-					patientId,
-					updatedPatientCardNumber,
-					PatientIdentifierEntity.PatientIdentifierType.PATIENT_CARD_NUM.name(),
-					null,
-					null,
-					PatientIdentifierStatus.OK.name(),
-					currentTime,
-					currentTime
-				);
+				PatientIdentifierEntity newPatientIdentifierEntity = new PatientIdentifierEntity(patientId,
+						updatedPatientCardNumber, PatientIdentifierEntity.PatientIdentifierType.PATIENT_CARD_NUM.name(),
+						null, null, PatientIdentifierStatus.OK.name(), currentTime, currentTime);
 				notificationDataSource.persist(newPatientIdentifierEntity);
 			}
 		}
 
 		if (!Objects.equals(oldTelecom, updatedTelecom)) {
-			List<PatientIdentifierEntity> patientIdentifierEntityList = notificationDataSource.getPatientIdentifierEntityByPatientIdAndIdentifier(patientId, oldTelecom);
-			PatientIdentifierEntity patientIdentifierEntity = (!patientIdentifierEntityList.isEmpty()) ? patientIdentifierEntityList.get(0) : null;
+			List<PatientIdentifierEntity> patientIdentifierEntityList = notificationDataSource
+					.getPatientIdentifierEntityByPatientIdAndIdentifier(patientId, oldTelecom);
+			PatientIdentifierEntity patientIdentifierEntity = (!patientIdentifierEntityList.isEmpty())
+					? patientIdentifierEntityList.get(0)
+					: null;
 
 			if (patientIdentifierEntity != null) {
 				patientIdentifierEntity.setStatus(PatientIdentifierStatus.DELETE.name());
@@ -368,7 +345,8 @@ public class ServerInterceptor {
 				notificationDataSource.update(patientIdentifierEntity);
 
 				if (PatientIdentifierStatus.OK.name().equals(patientIdentifierEntity.getStatus())) {
-					PatientIdentifierEntity entryWithDuplicateStatus = notificationDataSource.getPatientIdentifierEntityWithDuplicateStatus(patientId, oldTelecom);
+					PatientIdentifierEntity entryWithDuplicateStatus = notificationDataSource
+							.getPatientIdentifierEntityWithDuplicateStatus(patientId, oldTelecom);
 
 					if (!patientIdentifierEntityList.isEmpty()) {
 						entryWithDuplicateStatus.setStatus(PatientIdentifierStatus.OK.name());
@@ -381,24 +359,19 @@ public class ServerInterceptor {
 			if (updatedTelecom != null) {
 				long currentTime = System.currentTimeMillis();
 
-				PatientIdentifierEntity newPatientIdentifierEntity = new PatientIdentifierEntity(
-					patientId,
-					updatedTelecom,
-					PatientIdentifierEntity.PatientIdentifierType.PHONE_NUM.name(),
-					null,
-					null,
-					PatientIdentifierStatus.OK.name(),
-					currentTime,
-					currentTime
-				);
+				PatientIdentifierEntity newPatientIdentifierEntity = new PatientIdentifierEntity(patientId,
+						updatedTelecom, PatientIdentifierEntity.PatientIdentifierType.PHONE_NUM.name(), null, null,
+						PatientIdentifierStatus.OK.name(), currentTime, currentTime);
 				notificationDataSource.persist(newPatientIdentifierEntity);
 			}
 		}
 	}
 
 	private void processQuestionnaireResponse(QuestionnaireResponse questionnaireResponse) throws IOException {
-		if(questionnaireResponse == null) return ;
-		if(questionnaireResponse.getQuestionnaire() == null) return ;
+		if (questionnaireResponse == null)
+			return;
+		if (questionnaireResponse.getQuestionnaire() == null)
+			return;
 		if (questionnaireResponse.getQuestionnaire().equals("Questionnaire/labour")) {
 			byte[] bitmapdata = null;
 
@@ -406,12 +379,16 @@ public class ServerInterceptor {
 				if (item.getLinkId().equals("8.0")) {
 					for (QuestionnaireResponse.QuestionnaireResponseItemComponent groupItem : item.getItem()) {
 						if (groupItem.getLinkId().equals("8.2")) {
-							for (QuestionnaireResponse.QuestionnaireResponseItemComponent answerItem : groupItem.getItem()) {
+							for (QuestionnaireResponse.QuestionnaireResponseItemComponent answerItem : groupItem
+									.getItem()) {
 								if (answerItem.getLinkId().equals("8.2.1")) {
-									List<QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent> answers = answerItem.getAnswer();
+									List<QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent> answers = answerItem
+											.getAnswer();
 									if (answers != null && !answers.isEmpty()) {
-										QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent answer = answers.get(0);
-										if (answer.getValueAttachment() != null && answer.getValueAttachment().getData() != null) {
+										QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent answer = answers
+												.get(0);
+										if (answer.getValueAttachment() != null
+												&& answer.getValueAttachment().getData() != null) {
 											bitmapdata = answer.getValueAttachment().getData();
 											break;
 										}
@@ -436,21 +413,24 @@ public class ServerInterceptor {
 				return;
 			}
 
-			File image = new File(imagePath+"//"+md5Hash+".jpeg");
+			File image = new File(imagePath + "//" + md5Hash + ".jpeg");
 			FileUtils.writeByteArrayToFile(image, base64);
 			String imagePath = image.getAbsolutePath();
 			long imageSize = Files.size(Paths.get(imagePath));
 			long byteSize = base64.length;
-			if(imageSize == byteSize) {
+			if (imageSize == byteSize) {
 				for (QuestionnaireResponse.QuestionnaireResponseItemComponent item : questionnaireResponse.getItem()) {
 					if (item.getLinkId().equals("8.0")) {
 						for (QuestionnaireResponse.QuestionnaireResponseItemComponent groupItem : item.getItem()) {
 							if (groupItem.getLinkId().equals("8.2")) {
-								for (QuestionnaireResponse.QuestionnaireResponseItemComponent answerItem : groupItem.getItem()) {
+								for (QuestionnaireResponse.QuestionnaireResponseItemComponent answerItem : groupItem
+										.getItem()) {
 									if (answerItem.getLinkId().equals("8.2.1")) {
-										List<QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent> answers = answerItem.getAnswer();
+										List<QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent> answers = answerItem
+												.getAnswer();
 										if (answers != null && !answers.isEmpty()) {
-											QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent answer = answers.get(0);
+											QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent answer = answers
+													.get(0);
 											Attachment valueAttachment = answer.getValueAttachment();
 											if (valueAttachment != null) {
 												valueAttachment.setData(null);
@@ -477,26 +457,30 @@ public class ServerInterceptor {
 						break;
 					}
 				}
-			}
-			else {
+			} else {
 				logger.warn("Image Not Proper");
 			}
 		}
 
-		if(questionnaireResponse.getQuestionnaire().equals("Questionnaire/childBirth-registration")){
+		if (questionnaireResponse.getQuestionnaire().equals("Questionnaire/childBirth-registration")) {
 			byte[] bitmapdata = null;
-			for(QuestionnaireResponse.QuestionnaireResponseItemComponent item : questionnaireResponse.getItem()){
-				if(item.getLinkId().equals("birth-certificate-details")){
-					for(QuestionnaireResponse.QuestionnaireResponseItemComponent parentGroupItem : item.getItem()){
-						if(parentGroupItem.getLinkId().equals("15.0")){
-							for(QuestionnaireResponse.QuestionnaireResponseItemComponent childGroupItem : parentGroupItem.getItem()){
-								if(childGroupItem.getLinkId().equals("15.1")){
-									for (QuestionnaireResponse.QuestionnaireResponseItemComponent answerItem : childGroupItem.getItem()){
-										if(answerItem.getLinkId().equals("15.1.1")){
-											List<QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent> answers = answerItem.getAnswer();
+			for (QuestionnaireResponse.QuestionnaireResponseItemComponent item : questionnaireResponse.getItem()) {
+				if (item.getLinkId().equals("birth-certificate-details")) {
+					for (QuestionnaireResponse.QuestionnaireResponseItemComponent parentGroupItem : item.getItem()) {
+						if (parentGroupItem.getLinkId().equals("15.0")) {
+							for (QuestionnaireResponse.QuestionnaireResponseItemComponent childGroupItem : parentGroupItem
+									.getItem()) {
+								if (childGroupItem.getLinkId().equals("15.1")) {
+									for (QuestionnaireResponse.QuestionnaireResponseItemComponent answerItem : childGroupItem
+											.getItem()) {
+										if (answerItem.getLinkId().equals("15.1.1")) {
+											List<QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent> answers = answerItem
+													.getAnswer();
 											if (answers != null && !answers.isEmpty()) {
-												QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent answer = answers.get(0);
-												if (answer.getValueAttachment() != null && answer.getValueAttachment().getData() != null) {
+												QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent answer = answers
+														.get(0);
+												if (answer.getValueAttachment() != null
+														&& answer.getValueAttachment().getData() != null) {
 													bitmapdata = answer.getValueAttachment().getData();
 													break;
 												}
@@ -522,24 +506,29 @@ public class ServerInterceptor {
 				return;
 			}
 
-			File image = new File(imagePath+"//"+md5Hash+".jpeg");
+			File image = new File(imagePath + "//" + md5Hash + ".jpeg");
 			FileUtils.writeByteArrayToFile(image, base64);
 			String imagePath = image.getAbsolutePath();
 			long imageSize = Files.size(Paths.get(imagePath));
 			long byteSize = base64.length;
 
-			if(imageSize == byteSize){
-				for(QuestionnaireResponse.QuestionnaireResponseItemComponent item : questionnaireResponse.getItem()){
-					if(item.getLinkId().equals("birth-certificate-details")){
-						for(QuestionnaireResponse.QuestionnaireResponseItemComponent parentGroupItem : item.getItem()){
-							if(parentGroupItem.getLinkId().equals("15.0")){
-								for(QuestionnaireResponse.QuestionnaireResponseItemComponent childGroupItem : parentGroupItem.getItem()){
-									if(childGroupItem.getLinkId().equals("15.1")){
-										for (QuestionnaireResponse.QuestionnaireResponseItemComponent answerItem : childGroupItem.getItem()){
-											if(answerItem.getLinkId().equals("15.1.1")){
-												List<QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent> answers = answerItem.getAnswer();
+			if (imageSize == byteSize) {
+				for (QuestionnaireResponse.QuestionnaireResponseItemComponent item : questionnaireResponse.getItem()) {
+					if (item.getLinkId().equals("birth-certificate-details")) {
+						for (QuestionnaireResponse.QuestionnaireResponseItemComponent parentGroupItem : item
+								.getItem()) {
+							if (parentGroupItem.getLinkId().equals("15.0")) {
+								for (QuestionnaireResponse.QuestionnaireResponseItemComponent childGroupItem : parentGroupItem
+										.getItem()) {
+									if (childGroupItem.getLinkId().equals("15.1")) {
+										for (QuestionnaireResponse.QuestionnaireResponseItemComponent answerItem : childGroupItem
+												.getItem()) {
+											if (answerItem.getLinkId().equals("15.1.1")) {
+												List<QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent> answers = answerItem
+														.getAnswer();
 												if (answers != null && !answers.isEmpty()) {
-													QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent answer = answers.get(0);
+													QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent answer = answers
+															.get(0);
 													Attachment valueAttachment = answer.getValueAttachment();
 													if (valueAttachment != null) {
 														valueAttachment.setData(null);
@@ -569,8 +558,7 @@ public class ServerInterceptor {
 						break;
 					}
 				}
-			}
-			else {
+			} else {
 				logger.warn("Image Not Proper");
 			}
 		}
@@ -582,7 +570,7 @@ public class ServerInterceptor {
 			MessageDigest md5 = MessageDigest.getInstance("MD5");
 			byte[] hash = md5.digest(bytes);
 			StringBuilder stringBuilder = new StringBuilder(2 * hash.length);
-			for (byte b: hash) {
+			for (byte b : hash) {
 				stringBuilder.append(String.format("%02x", b));
 			}
 			digest = stringBuilder.toString();
